--- a/es/kibana/config/kibana.yml
+++ b/es/kibana/config/kibana.yml
@@ -6,6 +6,7 @@ xpack.spaces.enabled: false
 
 # Default Kibana configuration for docker target
 server.name: kibana
-server.host: "0"
+server.host: "0.0.0.0"
+server.shutdownTimeout: "10s"
 elasticsearch.hosts: [ "http://es:9200" ]
 monitoring.ui.container.elasticsearch.enabled: true
